--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </script>
     <link rel="stylesheet" href="./dist/css/final.css" />
   </head>
-  <body>
+  <body class="overflow-x-hidden">
     <!-- Header Start -->
     <header
       class="absolute left-0 top-0 z-10 flex w-full items-center bg-transparent"
@@ -235,25 +235,7 @@
                 />
               </svg>
             </a>
-            <!-- Twitter -->
-            <!-- <a
-				href="#"
-				target="_blank"
-				class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
-				>
-				<svg
-					width="20"
-					class="fill-current"
-					role="img"
-					viewBox="0 0 24 24"
-					xmlns="http://www.w3.org/2000/svg"
-				>
-					<title>X</title>
-					<path
-					d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"
-					/>
-				</svg>
-				</a> -->
+
             <!-- Facebook -->
             <a
               href="https://web.facebook.com/andi.yahya.16144/"
@@ -381,12 +363,12 @@
         <div class="flex flex-wrap">
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div
-              class="mb-10 h-[540px] overflow-hidden rounded-xl bg-white shadow-lg dark:bg-slate-800 dark:shadow-slate-700"
+              class="mb-10 h-[460px] overflow-hidden rounded-xl bg-white shadow-lg dark:bg-slate-800 dark:shadow-slate-700 md:h-[540px]"
             >
               <img
                 src="./dist/img/ausp.webp"
                 alt="Programming"
-                class="h-72 w-full"
+                class="h-52 w-full md:h-72"
               />
               <div class="px-6 py-8">
                 <h3>
@@ -415,9 +397,9 @@
             >
               <div class="bg-cover">
                 <img
-                  src="./dist/img/pmm2.JPG"
+                  src="./dist/img/pmm2.jpg"
                   alt="PMM 2"
-                  class="h-72 w-full"
+                  class="h-52 w-full md:h-72"
                 />
               </div>
               <div class="px-6 py-8">
@@ -449,13 +431,13 @@
           </div>
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div
-              class="mb-10 h-[540px] overflow-hidden rounded-xl bg-white shadow-lg dark:bg-slate-800 dark:shadow-slate-700"
+              class="mb-10 h-[500px] overflow-hidden rounded-xl bg-white shadow-lg dark:bg-slate-800 dark:shadow-slate-700 md:h-[540px]"
             >
               <div class="bg-cover">
                 <img
                   src="./dist/img/bdt.jpg"
                   alt="Programming"
-                  class="h-72 w-full"
+                  class="h-52 w-full md:h-72"
                 />
               </div>
               <div class="px-6 py-8">
@@ -565,13 +547,13 @@
               <div class="mb-2 flex justify-start">
                 <!-- Instagram -->
                 <a
-                  href="#"
+                  href="https://instagram.com/yhya.si_30"
                   target="_blank"
-                  class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
+                  class="mr-3 flex h-9 w-9 items-center justify-center border-slate-300 border-transparent text-slate-300 transition-all duration-300 ease-in-out hover:rounded-full hover:border-primary hover:bg-primary hover:text-white"
                 >
                   <svg
                     class="fill-current"
-                    width="20"
+                    width="22"
                     role="img"
                     viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg"
@@ -585,12 +567,12 @@
 
                 <!-- Facebook -->
                 <a
-                  href="#"
+                  href="https://web.facebook.com/andi.yahya.16144/"
                   target="_blank"
-                  class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
+                  class="mr-3 flex h-9 w-9 items-center justify-center border-slate-300 border-transparent text-slate-300 transition-all duration-300 ease-in-out hover:rounded-full hover:border-primary hover:bg-primary hover:text-white"
                 >
                   <svg
-                    width="20"
+                    width="22"
                     role="img"
                     viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg"
@@ -604,12 +586,12 @@
                 </a>
                 <!-- Linkedin -->
                 <a
-                  href="#"
+                  href="https://www.linkedin.com/in/andi-yahya-a92a0a256/"
                   target="_blank"
-                  class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
+                  class="mr-3 flex h-9 w-9 items-center justify-center border-slate-300 border-transparent text-slate-300 transition-all duration-300 ease-in-out hover:rounded-full hover:border-primary hover:bg-primary hover:text-white"
                 >
                   <svg
-                    width="20"
+                    width="22"
                     role="img"
                     viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg"
