--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         document.documentElement.classList.remove("dark");
       }
     </script>
+    <link type="image/png" sizes="96x96" rel="icon" href="/dist/img/icons8-favicon-96.png">
     <link rel="stylesheet" href="./dist/css/final.css" />
   </head>
   <body class="overflow-x-hidden">
