--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
         document.documentElement.classList.remove("dark");
       }
     </script>
-    <link type="image/png" sizes="96x96" rel="icon" href="/dist/img/icons8-favicon-96.png">
+    <link
+      type="image/png"
+      sizes="96x96"
+      rel="icon"
+      href="/dist/img/icons8-favicon-96.png"
+    />
     <link rel="stylesheet" href="./dist/css/final.css" />
   </head>
   <body class="overflow-x-hidden">
@@ -213,8 +218,7 @@
             Let's Connect
           </h3>
           <p class="mb-6 text-base font-medium text-secondary lg:text-lg">
-            Friends prevent isolation and loneliness and give you a chance to
-            offer strength 😉
+            Welcome! I'm passionate about building meaningful professional connections. If you're driven by excellence and innovation, let's connect. Whether you have a project in mind or want to discuss with me, I'm eager to hear from you. Reach me out via the contacts below. Let's explore opportunities together.
           </p>
           <div class="flex items-center">
             <!-- Instagram -->
@@ -536,6 +540,73 @@
     </section>
     <!-- Clients Section End -->
 
+    <!-- Contact Section Start  -->
+    <section id="contact" class="pb-32 pt-10 dark:bg-slate-800">
+      <div class="container">
+        <div class="w-full px-4">
+          <div class="mx-auto mb-16 max-w-xl text-center">
+            <h4 class="mb-2 text-lg font-semibold text-primary">Contact</h4>
+            <h2
+              class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl lg:text-5xl"
+            >
+              Contact Me
+            </h2>
+            <p class="text-md font-medium text-secondary md:text-lg">
+              If you have any further inquiries, kindly contact me!
+              <p class="text-xs font-normal text-slate-600">Please be patient if there are some errors regarding this, thank you for your understanding 😉</p>
+            </p>
+          </div>
+        </div>
+
+        <form action="">
+          <div class="w-full lg:mx-auto lg:w-2/3">
+            <div class="mb-8 w-full px-4">
+              <label for="name" class="text-base font-bold text-primary"
+                >Nama</label
+              >
+              <input
+                type="text"
+                id="name"
+                class="required w-full rounded-md bg-slate-200 p-3 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary"
+                placeholder="Masukan Name"
+              />
+            </div>
+            <div class="mb-8 w-full px-4">
+              <label for="email" class="text-base font-bold text-primary"
+                >Email</label
+              >
+              <input
+                type="email"
+                id="email"
+                class="required w-full rounded-md bg-slate-200 p-3 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary invalid:focus:ring-pink-700"
+                placeholder="Masukan Email"
+              />
+            </div>
+            <div class="mb-3 w-full px-4">
+              <label for="message" class="text-base font-bold text-primary"
+                >Pesan</label
+              >
+              <textarea
+                type="email"
+                id="message"
+                class="required h-32 w-full rounded-md bg-slate-200 p-3 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary"
+                placeholder="Masukan Pesan"
+              ></textarea>
+            </div>
+            <div class="w-full px-4">
+              <button
+                class="w-full rounded-full bg-primary px-4 py-2 text-base font-semibold text-white transition duration-300 hover:opacity-80 hover:shadow-lg"
+                id="buttonSend"
+              >
+                Kirim
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
+    <!-- Contact Section End  -->
+
     <!-- Footer Start  -->
     <footer class="bg-dark pb-12 pt-24" id="footer">
       <div class="container">
@@ -693,5 +764,14 @@
     <!-- Back to top End  -->
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="dist/js/script.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("op6fJxSYP4QXeOyZE");
+      })();
+    </script>
   </body>
 </html>
