--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                 type="text"
                 id="name"
                 class="required w-full rounded-md bg-slate-200 p-3 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary"
-                placeholder="Masukan Name"
+                placeholder="Insert Your Name"
               />
             </div>
             <div class="mb-8 w-full px-4">
@@ -579,18 +579,18 @@
                 type="email"
                 id="email"
                 class="required w-full rounded-md bg-slate-200 p-3 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary invalid:focus:ring-pink-700"
-                placeholder="Masukan Email"
+                placeholder="Insert Your Email"
               />
             </div>
             <div class="mb-3 w-full px-4">
               <label for="message" class="text-base font-bold text-primary"
-                >Pesan</label
+                >Message</label
               >
               <textarea
                 type="email"
                 id="message"
                 class="required h-32 w-full rounded-md bg-slate-200 p-3 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary"
-                placeholder="Masukan Pesan"
+                placeholder="Insert Your Message"
               ></textarea>
             </div>
             <div class="w-full px-4">
@@ -598,7 +598,7 @@
                 class="w-full rounded-full bg-primary px-4 py-2 text-base font-semibold text-white transition duration-300 hover:opacity-80 hover:shadow-lg"
                 id="buttonSend"
               >
-                Kirim
+                Send
               </button>
             </div>
           </div>
