--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     href="#technology"
                     class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white"
                     >Technology</a
-                  >
+                  > 
                 </li>
 
                 <li class="group">
@@ -302,8 +302,24 @@
           </div>
         </div>
         <div
-          class="flex w-full flex-wrap justify-center px-4 xl:mx-auto xl:w-10/12"
+          class="flex w-full flex-wrap justify-center px-4 xl:mx-auto xl:w-10/12 group"
         >
+          <div class="mb-23 p-4 md:w-1/2">
+            <div class="overflow-hidden rounded-md shadow-md">
+              <img
+                class="w-full"
+                src="./dist/img/web3.png"
+                alt="landing"
+                title="satu"
+              />
+            </div>
+            <h3 class="mb-3 mt-5 text-xl font-light text-dark dark:text-white  ">
+              <a class="group-hover:text-primary"  target="_blank" href="https://frontend-design-assignment-andi-yahya.vercel.app/">A Campaign Website</a>
+            </h3>
+            <p class="text-base font-medium text-secondary">
+              This is a campaign website built in Bootstrap 5, CSS 3, JavaScript.
+            </p>
+          </div>
           <div class="mb-23 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
               <img
@@ -332,7 +348,7 @@
               />
             </div>
             <h3 class="mb-3 mt-5 text-xl font-light text-dark dark:text-white">
-              ANIMELIST
+              Movie Discovery
             </h3>
             <p class="text-base font-medium text-secondary">
               Animelist website is a website for showing list of anime movies
