--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
               />
             </div>
             <h3 class="mb-3 mt-5 text-xl font-light text-dark dark:text-white  ">
-              <a class="group-hover:text-primary"  target="_blank" href="https://frontend-design-assignment-andi-yahya.vercel.app/">A Campaign Website</a>
+              <a class="group-hover:text-primary text-dark"  target="_blank" href="https://frontend-design-assignment-andi-yahya.vercel.app/">A Campaign Website</a>
             </h3>
             <p class="text-base font-medium text-secondary">
               This is a campaign website built in Bootstrap 5, CSS 3, JavaScript.
