--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
           </div>
         </div>
         <div
-          class="flex w-full flex-wrap justify-center px-4 xl:mx-auto xl:w-10/12 group"
+          class="flex w-full flex-wrap justify-center px-4 xl:mx-auto xl:w-10/12 "
         >
-          <div class="mb-23 p-4 md:w-1/2">
+          <div class="mb-23 p-4 md:w-1/2 group">
             <div class="overflow-hidden rounded-md shadow-md">
               <img
                 class="w-full"
