--- a/index.html
+++ b/index.html
@@ -314,10 +314,10 @@
               />
             </div>
             <h3 class="mb-3 mt-5 text-xl font-light text-dark dark:text-white  ">
-              <a class="group-hover:text-primary text-dark"  target="_blank" href="https://frontend-design-assignment-andi-yahya.vercel.app/">A Campaign Website</a>
+              <a class="group-hover:text-primary text-dark dark:text-white "  target="_blank" href="https://frontend-design-assignment-andi-yahya.vercel.app/">A Campaign Website</a>
             </h3>
             <p class="text-base font-medium text-secondary">
-              This is a campaign website built in Bootstrap 5, CSS 3, JavaScript.
+              I've developed a campaign website using Bootstrap 5, CSS 3, and JavaScript. Its purpose is to encourage visitors to take action by registering and exploring the articles.
             </p>
           </div>
           <div class="mb-23 p-4 md:w-1/2">
