Menambahkan laman portfolio, mengubah css, menambahkan configurasi pada tailwind dan merapikan file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <div class="relative flex items-center justify-between">
           <div class="px-4">
             <a
-              href="#home"
+              href="https://www.linkedin.com/in/andi-yahya-a92a0a256/"
+              target="_blank"
               id="cta"
               class="block py-6 text-lg font-bold text-primary"
               >Hire Me!!</a
@@ -66,7 +67,7 @@
                 </li>
                 <li class="group">
                   <a
-                    href="#portfolio"
+                    href="./portfolio"
                     class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white"
                     >Portfolio</a
                   >
@@ -106,7 +107,7 @@
     <!-- Hero Section Start -->
     <section class="overflow-x-hidden pt-36 dark:bg-dark" id="home">
       <div class="container">
-        <div class="flex flex-wrap">
+        <div class="flex flex-wrap  ">
           <div class="w-full self-center px-4 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">
               Hi There 👋, <span>I'am</span>
@@ -483,6 +484,7 @@
     <!-- Back to top End  -->
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="dist/js/script.js"></script>
+    <script src="dist/js/primaryFunction.js"></script>
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
