Menambahkan infinite scroll animation, menambahkan portfolio

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./dist/css/final.css" />
   </head>
-  <body>
+  <body class="dark:bg-dark">
     <!-- Header Start -->
     <header
       class="absolute left-0 top-0 z-10 flex w-full items-center bg-transparent"
@@ -107,7 +107,7 @@
     <!-- Hero Section Start -->
     <section class="overflow-x-hidden pt-36 dark:bg-dark" id="home">
       <div class="container">
-        <div class="flex flex-wrap  ">
+        <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">
               Hi There 👋, <span>I'am</span>
@@ -177,18 +177,13 @@
             Who am i?
           </h2>
           <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">
-            I'am a third-year student of Informatics Engineering at the Faculty
-            of Engineering, Muhammadiyah University of Bengkulu (UMB). I have
-            actively engaged in various Kampus Merdeka activities such as
-            Pertukaran Mahasiswa Merdeka 2 and International Student Exchange,
-            while also dedicating my time to training through platforms like
-            Dicoding Indonesia, RevoU, and Sololearn, with a focus on enhancing
-            my proficiency in web development, specifically the MERN Stack
-            (React and Node.js) and These experiences reflect my commitment to
-            both critical and technical skill in Web Development. I am confident
-            that these knowledge and skills I have gained so far will contribute
-            positively and I am confident that this internship will be a pivotal
-            step in my ongoing professional growth.
+            I am a 6th-semester Informatics Engineering student at the Faculty
+            of Engineering, Universitas Muhammadiyah Bengkulu with passion in
+            web designs and development. I focus on frontend web development and
+            continually strive to enhance my skills. With strong communication
+            skills, leadership abilities, attention to detail, and a high
+            enthusiasm for learning, I am confident in my potential to succeed
+            as a frontend web developer.
           </p>
         </div>
         <div class="w-full px-4 lg:w-1/2">
@@ -268,6 +263,311 @@
       </div>
     </section>
     <!-- About Section End -->
+
+    <!-- Certificate section start -->
+    <section class="container mb-32 w-full overflow-hidden dark:bg-dark">
+      <div class="group inline-flex w-full flex-nowrap gap-2">
+        <ul
+          class="animate-infinite-scroll group-hover:animate-infinite-scroll-paused flex w-full items-center justify-center gap-3 md:justify-start"
+        >
+          <div class="group inline-flex w-full flex-nowrap gap-2">
+            <ul
+              class="animate-infinite-scroll group-hover:animate-infinite-scroll-paused flex w-full items-center justify-center gap-3 md:justify-start"
+            >
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c1.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      RevoU - Data Analytics
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c2.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      RevoU - Software Engineering
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c3.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      Aws Academy Cloud Architecting
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c4.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      Dicoding - Pemrograman JavaScript
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c5.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      Dicoding - Pemrograman Web
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c6.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      Dicoding - Cloud Essential
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c7.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      Dev Coaching - Membuat HTTP Server
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c8.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      Google - Digital Marketing
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c9.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      Intro to Python
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c10.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      Pertukaran Mahasiswa Merdeka 2
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c11.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      Python Data Structure
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c12.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      Python Intermediate
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c13.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      Aws Cloud Foundations
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c14.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      Digitalent - Aws Cloud Engineer
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c15.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      Outstanding Student
+                    </h5>
+                  </a>
+                </div>
+              </li>
+              <li
+                class="w-72 max-w-none flex-shrink-0 overflow-hidden rounded-lg border border-gray-200 bg-white shadow dark:border-gray-700 dark:bg-gray-800"
+              >
+                <a href="#">
+                  <div
+                    class="h-48 bg-[url('/dist/img/imgCertificates/c16.png')] bg-cover bg-center"
+                  ></div>
+                </a>
+                <div class="px-5 pb-5">
+                  <a href="#">
+                    <h5
+                      class="text-md text-center font-semibold tracking-tight text-gray-900 dark:text-white"
+                    >
+                      Student Exchange
+                    </h5>
+                  </a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </ul>
+      </div>
+    </section>
+    <!-- Certificate section end -->
 
     <!-- Contact Section Start  -->
     <section id="contact" class="pb-32 pt-10 dark:bg-slate-800">
