--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -120,7 +120,7 @@
             class="group box-border flex cursor-pointer justify-between rounded-md p-4 shadow-lg dark:shadow-md dark:shadow-purple-900"
           >
             <h1
-              class="font-tesFont m-auto h-[70px] bg-gradient-to-r from-pink-500 to-violet-500 bg-clip-text text-5xl font-bold text-transparent group-hover:from-violet-500 group-hover:to-pink-500"
+              class="m-auto h-[170px] bg-gradient-to-r from-pink-500 to-violet-500 bg-clip-text font-tesFont text-5xl font-bold text-transparent group-hover:from-violet-500 group-hover:to-pink-500"
             >
               Campaign Web
             </h1>
@@ -133,10 +133,7 @@
             </div>
           </div>
         </a>
-        <a
-          href="https://campaign-frontend-design-andi-yahya.vercel.app/"
-          target="_blank"
-        >
+        <a href="https://e-toko-yhyas-projects.vercel.app/" target="_blank">
           <div
             class="group box-border flex cursor-pointer justify-between rounded-md p-4 shadow-lg dark:shadow-md dark:shadow-purple-900"
           >
@@ -144,13 +141,13 @@
               class="relative h-[400px] w-[700px] overflow-hidden rounded-md bg-dark"
             >
               <div
-                class="absolute h-full w-full bg-[url('/dist/img/web3.png')] bg-cover bg-center transition-transform ease-out group-hover:rotate-[.6deg] group-hover:scale-110"
+                class="absolute h-full w-full bg-[url('/dist/img/e-toko.png')] bg-cover bg-center transition-transform ease-out group-hover:rotate-[.6deg] group-hover:scale-110"
               ></div>
             </div>
             <h1
-              class="font-tesFont m-auto h-[70px] bg-gradient-to-r from-pink-500 to-violet-500 bg-clip-text text-5xl font-bold text-transparent group-hover:from-violet-500 group-hover:to-pink-500"
+              class="m-auto h-[170px] bg-gradient-to-r from-pink-500 to-violet-500 bg-clip-text font-tesFont text-5xl font-bold text-transparent group-hover:from-violet-500 group-hover:to-pink-500"
             >
-              Campaign Web
+              E-Commerce
             </h1>
           </div>
         </a>
